--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -51,14 +51,26 @@ header {
     }
 }
 
-@media(max-width: 380px){
+@media(max-width: 500px){
     header {
         h1 {
             font-size: 2.5em;
         }
 
         h2 {
+            font-size: 1.4em;
+        }
+    }
+}
+
+@media(max-width: 380px){
+    header {
+        h1 {
             font-size: 2em;
+        }
+
+        h2 {
+            font-size: 1.2em;
         }
     }
 }
